--- a/packages/wc/dev/index.css
+++ b/packages/wc/dev/index.css
@@ -18,15 +18,12 @@ h1 {
 
 .container {
     margin: 0 auto;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    width: 400px;
+    max-width: 100%;
 }
 
-.container>* {
-    flex-basis: 360px;
-    flex-shrink: 0;
+summary {
+    padding: .5em 0;
 }
 
 input {
