--- a/packages/wc/dev/index.css
+++ b/packages/wc/dev/index.css
@@ -34,3 +34,10 @@ input {
     font-family: ui-sans-serif;
 
 }
+
+details {
+    border: 1px solid #ccc;
+    border-radius: .5em;
+    padding: .25em;
+    margin: .5em 0;
+}
