--- a/packages/wc/dev/index.css
+++ b/packages/wc/dev/index.css
@@ -18,8 +18,14 @@ h1 {
 
 .container {
     margin: 0 auto;
-    width: 400px;
+    /*width: 400px;*/
     max-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.container>* {
+    flex: 1 1 360px;
 }
 
 summary {
